<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="@string/theme_preference_key"
        android:title="@string/theme_preference_title"
        android:summary="@string/theme_preference_summ"
        android:defaultValue="false"/>
    <CheckBoxPreference
        android:key="@string/compact_layout_preference_key"
        android:title="@string/compact_layout_preference_title"
        android:summary="@string/compact_layout_preference_summ"
        android:defaultValue="false"/>
    <CheckBoxPreference
        android:key="@string/launch_wp_pref_key"
        android:title="@string/launch_wp_pref_title"
        android:summary="@string/launch_wp_pref_summ"
        android:defaultValue="false"/>
    <ListPreference
        android:key="@string/sorttype_apps_pref_key"
        android:title="@string/sorttype_apps_pref_title"
        android:summary="@string/sorttype_apps_pref_summ"
        android:entries="@array/sorttype_apps_pref_entries"
        android:entryValues="@array/sorttype_apps_pref_entryvalues"
        android:defaultValue="0"/>
</PreferenceScreen>